core/bindings/lang/clang/headers/nogamepads_utils.h

typedef enum FfiExitReason {
  ExitReason,
  GameOverReason,
  ServerClosedReason,
  YouAreKickedReason,
  YouAreBannedReason,
  ErrorReason,
} FfiExitReason;
typedef enum FfiServiceType {
  Unknown,
  TCPConnection,
  BlueTooth,
  USB,
} FfiServiceType;
typedef struct FfiPlayer {
  struct FfiAccount account;
  struct FfiCustomize *customize;
} FfiPlayer;
typedef struct FfiGameMessage {
  enum FfiGameMessageTag tag;
  union FfiGameMessageUnion data;
} FfiGameMessage;
typedef struct FfiControllerRuntime {
  void *inner;
  void (*drop_fn)(void*);
} FfiControllerRuntime;
typedef struct FfiGameData {
  void *_0;
} FfiGameData;
typedef struct FfiGameRuntimeArchive {
  void *_0;
} FfiGameRuntimeArchive;
typedef struct FfiGameRuntime {
  void *inner;
  void (*drop_fn)(void*);
} FfiGameRuntime;
typedef struct FfiControlEvent {
  struct FfiPlayer player;
  struct FfiControlMessage message;
} FfiControlEvent;
typedef struct FfiButtonStatus {
  bool found;
  bool pressed;
  bool released;
} FfiButtonStatus;
typedef struct FfiAxis {
  bool found;
  double axis;
} FfiAxis;
typedef struct FfiDirection {
  bool found;
  double x;
  double y;
} FfiDirection;
typedef struct FfiBooleanResult {
  bool found;
  bool result;
} FfiBooleanResult;
typedef struct FfiPlayerList {
  struct FfiPlayer *players;
  uintptr_t len;
  uintptr_t cap;
} FfiPlayerList;
typedef struct FfiTcpClientService {
  void *_0;
} FfiTcpClientService;
typedef struct FfiTcpServerService {
  void *_0;
} FfiTcpServerService;
/**
 * Set name info
 */
struct FfiGameData *game_data_set_name_info(struct FfiGameData *data, const char *name);
/**
 * Set version info
 */
struct FfiGameData *game_data_set_version_info(struct FfiGameData *data, const char *version);
/**
 * Load data archive
 */
struct FfiGameData *game_data_load_archive(struct FfiGameData *data,
                                           struct FfiGameRuntimeArchive *archive);
/**
 * Build runtime by data
 */
struct FfiGameRuntime *game_data_build_runtime(struct FfiGameData *data);
/**
 * Free data
 */
void free_game_data(struct FfiGameData *data);
/**
 * Create game archive data
 */
struct FfiGameRuntimeArchive *game_archive_data_new(void);
/**
 * Add ban player
 */
struct FfiGameRuntimeArchive *game_archive_data_add_ban_player(struct FfiGameRuntimeArchive *data,
                                                               struct FfiPlayer *ffi_player);
/**
 * Free data
 */
void free_game_archive_data(struct FfiGameRuntimeArchive *data);
/**
 * Send a message to
 */
void game_runtime_send_message_to(struct FfiGameRuntime *runtime,
                                  const struct FfiPlayer *player,
                                  struct FfiGameMessage *message,
                                  enum FfiServiceType service_type);
/**
 * Send a text message
 */
void game_runtime_send_text_message(struct FfiGameRuntime *runtime,
                                    const struct FfiPlayer *player,
                                    enum FfiServiceType service_type,
                                    const char *text);
/**
 * Send a event message
 */
void game_runtime_send_event(struct FfiGameRuntime *runtime,
                             const struct FfiPlayer *player,
                             enum FfiServiceType service_type,
                             uint8_t key);
/**
 * Pop a control event
 */
struct FfiControlEvent *game_runtime_pop_control_event(struct FfiGameRuntime *runtime);
/**
 * Let player exit
 */
void game_runtime_let_exit(struct FfiGameRuntime *runtime,
                           const struct FfiPlayer *player,
                           enum FfiServiceType service_type,
                           enum FfiExitReason reason);
/**
 * Kick a player
 */
void game_runtime_kick_player(struct FfiGameRuntime *runtime,
                              const struct FfiPlayer *player,
                              enum FfiServiceType service_type);
/**
 * Ban a player (And kick)
 */
void game_runtime_ban_player(struct FfiGameRuntime *runtime,
                             const struct FfiPlayer *player,
                             enum FfiServiceType service_type);
/**
 * Pardon a player
 */
void game_runtime_pardon_player(struct FfiGameRuntime *runtime, const struct FfiPlayer *player);
/**
 * Close runtime
 */
void game_runtime_close(struct FfiGameRuntime *runtime);
/**
 * Lock game
 */
void game_runtime_lock(struct FfiGameRuntime *runtime);
/**
 * Unlock game
 */
void game_runtime_unlock(struct FfiGameRuntime *runtime);
/**
 * Get game lock status
 */
bool game_runtime_get_lock_status(struct FfiGameRuntime *runtime);
/**
 * Get button status of player
 */
struct FfiButtonStatus game_runtime_get_button_status(struct FfiGameRuntime *runtime,
                                                      const struct FfiPlayer *player,
                                                      uint8_t key);
/**
 * Get axis value of player
 */
struct FfiAxis game_runtime_get_axis(struct FfiGameRuntime *runtime,
                                     const struct FfiPlayer *player,
                                     uint8_t key);
/**
 * Get direction value of player
 */
struct FfiDirection game_runtime_get_direction(struct FfiGameRuntime *runtime,
                                               const struct FfiPlayer *player,
                                               uint8_t key);
/**
 * Get service type of player
 */
enum FfiServiceType game_runtime_get_service_type(struct FfiGameRuntime *runtime,
                                                  const struct FfiPlayer *player);
/**
 * Is player banned
 */
struct FfiBooleanResult game_runtime_is_player_banned(struct FfiGameRuntime *runtime,
                                                      const struct FfiPlayer *player);
/**
 * Is player online
 */
struct FfiBooleanResult game_runtime_is_player_online(struct FfiGameRuntime *runtime,
                                                      const struct FfiPlayer *player);
/**
 * Get online list
 */
struct FfiPlayerList game_runtime_get_online_list(struct FfiGameRuntime *runtime);
/**
 * Get banned list
 */
struct FfiPlayerList game_runtime_get_banned_list(struct FfiGameRuntime *runtime);
/**
 * Free game runtime
 */
void free_game_runtime(struct FfiGameRuntime *runtime);
/**
 * Free control event
 */
void free_control_event(struct FfiControlEvent *event);
/**
 * Free player list
 */
void free_player_list(struct FfiPlayerList list);
/**
 * Free service type tag
 */
void free_ffi_service_type(enum FfiServiceType *ptr);
/**
 * Build tcp client
 */
struct FfiTcpClientService *tcp_client_build(struct FfiControllerRuntime *runtime);
/**
 * Bind ipv4 address
 */
void tcp_client_bind_ipv4(struct FfiTcpClientService *service,
                          uint8_t a0,
                          uint8_t a1,
                          uint8_t a2,
                          uint8_t a3);
/**
 * Bind ipv6 address
 */
bool tcp_client_bind_ipv6(struct FfiTcpClientService *service, const char *ip_str);
/**
 * Bind port
 */
void tcp_client_bind_port(struct FfiTcpClientService *service, uint16_t port);
/**
 * Bind address with ipv4
 */
void tcp_client_bind_address_v4(struct FfiTcpClientService *service,
                                uint8_t a0,
                                uint8_t a1,
                                uint8_t a2,
                                uint8_t a3,
                                uint16_t port);
/**
 * Bind address with ipv6
 */
bool tcp_client_bind_address_v6(struct FfiTcpClientService *service,
                                const char *ip_str,
                                uint16_t port);
/**
 * Connect
 */
void tcp_client_connect(struct FfiTcpClientService *service);
/**
 * Free tcp client
 */
void free_tcp_client(struct FfiTcpClientService *service);
/**
 * Build tcp server
 */
struct FfiTcpServerService *tcp_server_build(struct FfiGameRuntime *runtime);