core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Core/Generated/NoGamepads.Native.cs


            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_data_set_name_info", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr GameDataSetNameInfo(__IntPtr data, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string name);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_data_set_version_info", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr GameDataSetVersionInfo(__IntPtr data, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string version);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_data_load_archive", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr GameDataLoadArchive(__IntPtr data, __IntPtr archive);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_data_build_runtime", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr GameDataBuildRuntime(__IntPtr data);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_game_data", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeGameData(__IntPtr data);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_archive_data_new", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr GameArchiveDataNew();

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_archive_data_add_ban_player", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr GameArchiveDataAddBanPlayer(__IntPtr data, __IntPtr ffi_player);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_game_archive_data", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeGameArchiveData(__IntPtr data);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_send_message_to", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeSendMessageTo(__IntPtr runtime, __IntPtr player, __IntPtr message, global::NoGamepads_Sharp.FfiServiceType service_type);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_send_text_message", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeSendTextMessage(__IntPtr runtime, __IntPtr player, global::NoGamepads_Sharp.FfiServiceType service_type, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string text);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_send_event", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeSendEvent(__IntPtr runtime, __IntPtr player, global::NoGamepads_Sharp.FfiServiceType service_type, byte key);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_pop_control_event", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr GameRuntimePopControlEvent(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_let_exit", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeLetExit(__IntPtr runtime, __IntPtr player, global::NoGamepads_Sharp.FfiServiceType service_type, global::NoGamepads_Sharp.FfiExitReason reason);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_kick_player", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeKickPlayer(__IntPtr runtime, __IntPtr player, global::NoGamepads_Sharp.FfiServiceType service_type);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_ban_player", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeBanPlayer(__IntPtr runtime, __IntPtr player, global::NoGamepads_Sharp.FfiServiceType service_type);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_pardon_player", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimePardonPlayer(__IntPtr runtime, __IntPtr player);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_close", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeClose(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_lock", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeLock(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_unlock", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeUnlock(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_get_lock_status", CallingConvention = __CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool GameRuntimeGetLockStatus(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_get_button_status", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeGetButtonStatus(__IntPtr @return, __IntPtr runtime, __IntPtr player, byte key);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_get_axis", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeGetAxis(__IntPtr @return, __IntPtr runtime, __IntPtr player, byte key);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_get_direction", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeGetDirection(__IntPtr @return, __IntPtr runtime, __IntPtr player, byte key);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_get_service_type", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern global::NoGamepads_Sharp.FfiServiceType GameRuntimeGetServiceType(__IntPtr runtime, __IntPtr player);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_is_player_banned", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern global::NoGamepads_Sharp.FfiBooleanResult.__Internal GameRuntimeIsPlayerBanned(__IntPtr runtime, __IntPtr player);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_is_player_online", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern global::NoGamepads_Sharp.FfiBooleanResult.__Internal GameRuntimeIsPlayerOnline(__IntPtr runtime, __IntPtr player);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_get_online_list", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeGetOnlineList(__IntPtr @return, __IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "game_runtime_get_banned_list", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void GameRuntimeGetBannedList(__IntPtr @return, __IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_game_runtime", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeGameRuntime(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_control_event", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeControlEvent(__IntPtr @event);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_player_list", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreePlayerList(__IntPtr list);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_ffi_service_type", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeFfiServiceType(global::NoGamepads_Sharp.FfiServiceType* ptr);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_client_build", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr TcpClientBuild(__IntPtr runtime);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_client_bind_ipv4", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void TcpClientBindIpv4(__IntPtr service, byte a0, byte a1, byte a2, byte a3);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_client_bind_ipv6", CallingConvention = __CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool TcpClientBindIpv6(__IntPtr service, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string ip_str);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_client_bind_port", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void TcpClientBindPort(__IntPtr service, ushort port);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_client_bind_address_v4", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void TcpClientBindAddressV4(__IntPtr service, byte a0, byte a1, byte a2, byte a3, ushort port);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_client_bind_address_v6", CallingConvention = __CallingConvention.Cdecl)]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool TcpClientBindAddressV6(__IntPtr service, [MarshalAs(UnmanagedType.CustomMarshaler, MarshalTypeRef = typeof(CppSharp.Runtime.UTF8Marshaller))] string ip_str, ushort port);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_client_connect", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void TcpClientConnect(__IntPtr service);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "free_tcp_client", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern void FreeTcpClient(__IntPtr service);

            [SuppressUnmanagedCodeSecurity, DllImport("NoGamepads.Native.dll", EntryPoint = "tcp_server_build", CallingConvention = __CallingConvention.Cdecl)]
            internal static extern __IntPtr TcpServerBuild(__IntPtr runtime);
